# dsync

./: PLAN.md  README.md  pyproject.toml
scripts/: migrate_syncthing.sh
src/dsync/: __main__.py  chezmoi.py  cli.py  config.py  conflict.py  hub.py  hub_cli.py  lock.py  log.py  netbird.py  obsidian.py  project_cli.py  projects.py  resolver.py  retry.py  selfupdate.py  ssh_client.py  syncthing.py  ui.py  zen.py
tests/: test_cli.py  test_config.py  test_conflict.py  test_hub.py  test_netbird.py  test_projects.py  test_selfupdate.py
